# serial-monitor

./: .gitignore  CMakeLists.txt  README.md  project.md
.github/workflows/: build.yml  release.yml
cmake/: FindRapidJSON.cmake
deb_pack/: build_deb.sh
deb_pack/emberinter_1.2.0/DEBIAN/: control  postinst  postrm
deb_pack/emberinter_1.2.0/usr/share/applications/: emberinter.desktop
deb_pack/emberinter_1.2.0/usr/share/doc/emberinter/: copyright
deploy/: deploy.sh  emberInter.iss
resources/: resources.qrc
resources/styles/: dark_theme.qss
src/cli/: CMakeLists.txt  cli_app.cpp  cli_app.h  ipc_client.cpp  ipc_client.h
src/core/: config_manager.cpp  config_manager.h  serial_engine.cpp  serial_engine.h
src/gui/: CMakeLists.txt  ipc_server.cpp  ipc_server.h  log_view.cpp  log_view.h  main.cpp  main_window.cpp  main_window.h  serial_port_dialog.cpp  settings_dialog.cpp
